--- a/DemoWpf/Views/MainWindow.xaml
+++ b/DemoWpf/Views/MainWindow.xaml
@@ -31,11 +31,11 @@
         <!--  Toolbar  -->
         <materialDesign:ColorZone Grid.Row="0"
                                   Panel.ZIndex="1"
-                                  materialDesign:ShadowAssist.ShadowDepth="Depth2"
+                                  materialDesign:ShadowAssist.ShadowDepth="Depth1"
                                   Mode="PrimaryMid">
             <StackPanel Orientation="Vertical">
                 <!--  Query  -->
-                <materialDesign:Card Padding="0">
+                <materialDesign:Card Margin="5">
                     <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*" />
@@ -47,7 +47,7 @@
                                  Margin="5"
                                  materialDesign:HintAssist.Hint="Youtube video URL or ID"
                                  BorderThickness="0"
-                                 FontSize="16"
+                                 FontSize="15"
                                  KeyDown="tbVideoId_KeyDown"
                                  Text="{Binding VideoId, UpdateSourceTrigger=PropertyChanged}" />
                         <Button x:Name="GetDataButton"
@@ -97,7 +97,7 @@
             <StackPanel Orientation="Vertical">
                 <!--  Image  -->
                 <Border HorizontalAlignment="Stretch" Background="Black">
-                    <Image Source="{Binding VideoInfo.ImageMediumResUrl}" />
+                    <Image Height="180" Source="{Binding VideoInfo.ImageMediumResUrl}" />
                 </Border>
 
                 <!--  Basic metadata  -->
@@ -106,6 +106,7 @@
                         <!--  Title  -->
                         <TextBlock Margin="5"
                                    FontSize="18"
+                                   FontWeight="Medium"
                                    Foreground="{DynamicResource PrimaryTextBrush}"
                                    Text="{Binding VideoInfo.Title}" />
 
@@ -138,7 +139,7 @@
                                 <TextBlock Grid.Row="0"
                                            Grid.Column="0"
                                            Margin="5"
-                                           FontSize="16"
+                                           FontSize="15"
                                            Foreground="{DynamicResource PrimaryTextBrush}"
                                            Text="{Binding VideoInfo.Author.DisplayName}" />
 
@@ -147,7 +148,7 @@
                                            Grid.Column="1"
                                            Margin="5"
                                            HorizontalAlignment="Right"
-                                           FontSize="16">
+                                           FontSize="15">
                                     <Run Text="{Binding VideoInfo.ViewCount, StringFormat=\{0:N0\}, Mode=OneWay}" />
                                     <Run Text="views" />
                                 </TextBlock>
@@ -158,8 +159,7 @@
                                         Height="2"
                                         Margin="5,0,0,0"
                                         HorizontalAlignment="Stretch"
-                                        Background="{DynamicResource MiscBrush}"
-                                        Opacity="0.5" />
+                                        Background="{DynamicResource MaterialDesignDivider}" />
 
                                 <!--  Rating bar  -->
                                 <ProgressBar Grid.Row="1"
@@ -206,7 +206,7 @@
                 <materialDesign:Card Margin="3,0,3,3">
                     <Expander Background="{DynamicResource MaterialDesignCardBackground}">
                         <Expander.Header>
-                            <TextBlock FontSize="14">
+                            <TextBlock FontSize="15">
                                 <Run Text="Description" />
                             </TextBlock>
                         </Expander.Header>
@@ -221,7 +221,7 @@
                 <materialDesign:Card Margin="3,0,3,3">
                     <Expander Background="{DynamicResource MaterialDesignCardBackground}">
                         <Expander.Header>
-                            <TextBlock FontSize="14">
+                            <TextBlock FontSize="15">
                                 <Run Text="Keywords" />
                                 <Run Text="(" /><Run Text="{Binding VideoInfo.Keywords.Count, Mode=OneWay}" /><Run Text=")" />
                             </TextBlock>
@@ -237,7 +237,7 @@
                 <materialDesign:Card Margin="3,0,3,3">
                     <Expander Background="{DynamicResource MaterialDesignCardBackground}">
                         <Expander.Header>
-                            <TextBlock FontSize="14">
+                            <TextBlock FontSize="15">
                                 <Run Text="Media streams" />
                                 <Run Text="(" /><Run Text="{Binding VideoInfo.Streams.Count, Mode=OneWay}" /><Run Text=")" />
                             </TextBlock>
@@ -282,7 +282,7 @@
                 <materialDesign:Card Margin="3,0,3,3">
                     <Expander Background="{DynamicResource MaterialDesignCardBackground}">
                         <Expander.Header>
-                            <TextBlock FontSize="14">
+                            <TextBlock FontSize="15">
                                 <Run Text="Closed captions" />
                                 <Run Text="(" /><Run Text="{Binding VideoInfo.ClosedCaptionTracks.Count, Mode=OneWay}" /><Run Text=")" />
                             </TextBlock>
