--- a/DemoWpf/App.xaml
+++ b/DemoWpf/App.xaml
@@ -1,15 +1,17 @@
-﻿<Application x:Class="YoutubeExplode.DemoWpf.App"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:converters="clr-namespace:YoutubeExplode.DemoWpf.Converters"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:demoWpf="clr-namespace:YoutubeExplode.DemoWpf"
-             xmlns:ignore="http://www.galasoft.ch/ignore"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-             Exit="App_OnExit"
-             Startup="App_OnStartup"
-             StartupUri="Views/MainWindow.xaml"
-             mc:Ignorable="d ignore">
+﻿<Application
+    x:Class="YoutubeExplode.DemoWpf.App"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:YoutubeExplode.DemoWpf.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:demoWpf="clr-namespace:YoutubeExplode.DemoWpf"
+    xmlns:ignore="http://www.galasoft.ch/ignore"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Exit="App_OnExit"
+    Startup="App_OnStartup"
+    StartupUri="Views/MainWindow.xaml"
+    mc:Ignorable="d ignore">
 
     <Application.Resources>
         <ResourceDictionary>
@@ -36,27 +38,34 @@
             <SolidColorBrush x:Key="SecondaryAccentBrush" Color="{DynamicResource AccentColor}" />
             <SolidColorBrush x:Key="SecondaryAccentForegroundBrush" Color="{DynamicResource TextColor}" />
 
-            <SolidColorBrush x:Key="PrimaryTextBrush"
-                             Opacity="0.87"
-                             Color="{DynamicResource TextColor}" />
-            <SolidColorBrush x:Key="SecondaryTextBrush"
-                             Opacity="0.64"
-                             Color="{DynamicResource TextColor}" />
-            <SolidColorBrush x:Key="DimTextBrush"
-                             Opacity="0.45"
-                             Color="{DynamicResource TextColor}" />
-            <SolidColorBrush x:Key="PrimaryInverseTextBrush"
-                             Opacity="1"
-                             Color="{DynamicResource InverseTextColor}" />
-            <SolidColorBrush x:Key="SecondaryInverseTextBrush"
-                             Opacity="0.7"
-                             Color="{DynamicResource InverseTextColor}" />
-            <SolidColorBrush x:Key="DimInverseTextBrush"
-                             Opacity="0.52"
-                             Color="{DynamicResource InverseTextColor}" />
-            <SolidColorBrush x:Key="AccentTextBrush"
-                             Opacity="1"
-                             Color="{DynamicResource AccentColor}" />
+            <SolidColorBrush
+                x:Key="PrimaryTextBrush"
+                Opacity="0.87"
+                Color="{DynamicResource TextColor}" />
+            <SolidColorBrush
+                x:Key="SecondaryTextBrush"
+                Opacity="0.64"
+                Color="{DynamicResource TextColor}" />
+            <SolidColorBrush
+                x:Key="DimTextBrush"
+                Opacity="0.45"
+                Color="{DynamicResource TextColor}" />
+            <SolidColorBrush
+                x:Key="PrimaryInverseTextBrush"
+                Opacity="1"
+                Color="{DynamicResource InverseTextColor}" />
+            <SolidColorBrush
+                x:Key="SecondaryInverseTextBrush"
+                Opacity="0.7"
+                Color="{DynamicResource InverseTextColor}" />
+            <SolidColorBrush
+                x:Key="DimInverseTextBrush"
+                Opacity="0.52"
+                Color="{DynamicResource InverseTextColor}" />
+            <SolidColorBrush
+                x:Key="AccentTextBrush"
+                Opacity="1"
+                Color="{DynamicResource AccentColor}" />
 
             <!--  Styles  -->
             <Style BasedOn="{StaticResource MaterialDesignLinearProgressBar}" TargetType="{x:Type ProgressBar}">
@@ -69,6 +78,10 @@
 
             <Style BasedOn="{StaticResource MaterialDesignTextBox}" TargetType="{x:Type TextBox}">
                 <Setter Property="Foreground" Value="{DynamicResource PrimaryTextBrush}" />
+            </Style>
+
+            <Style BasedOn="{StaticResource {x:Type materialDesign:Card}}" TargetType="{x:Type materialDesign:Card}">
+                <Setter Property="materialDesign:ShadowAssist.ShadowDepth" Value="Depth1" />
             </Style>
 
             <!--  Converters  -->
